# serelepe

./: .gitignore  CMakeLists.txt  README.md
examples/direct_link_to_jerry/: build.sh  main.c
examples/direct_link_to_jerry/example_1/: build.sh  main.c
examples/direct_link_to_jerry/example_2/: main.c
examples/direct_link_to_jerry/example_3/: main.c
examples/direct_link_to_jerry/example_4/: main.c
examples/direct_link_to_jerry/example_5/: main.c
examples/direct_link_to_jerry/features/: main.c
examples/direct_link_to_jerry/port/: build.sh  main.c
examples/direct_link_to_jerry/string_roundtrip/: build.sh  main.c
examples/linux_tricks/dlopen/: main.c
examples/linux_tricks/read_exec_path/: build.sh  main.c
examples/linux_tricks/syscall/: build.sh  main.c
src/: build.sh  main.c
tools/: build_jerry.sh  build_serelepe.sh
